--- a/trainer/app/index.html
+++ b/trainer/app/index.html
@@ -43,13 +43,16 @@
             </div>
         </div>
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-resource.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-sanitize.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-animate.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-messages.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.js"></script>
     <!--Script required for E2E testing. Comment it in production use-->
     <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-mocks.js"></script>-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/bower-angular-translate/2.5.2/angular-translate.js"></script>
@@ -58,21 +61,11 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.js"></script>
     <script src="js/vendor/angular-media-player.js"></script>
     <script src="js/vendor/angular-local-storage.js"></script>
-    <script src="js/app.js"></script>
-    <!--Script required for E2E testing. Comment it in production use-->
-    <!--<script src="js/appe2e.js"></script>-->
-    <script src="js/root.js"></script>
-    <script src="js/7MinWorkout/workout.js"></script>
-    <script src="js/7MinWorkout/workoutvideos.js"></script>
-    <script src="js/7MinWorkout/filters.js"></script>
-    <script src="js/7MinWorkout/services.js"></script>
-    <script src="js/workoutbuilder/services.js"></script>
-    <script src="js/workoutbuilder/directives.js"></script>
-    <script src="js/shared/services.js"></script>
-    <script src="js/shared/directives.js"></script>
-    <script src="js/shared/model.js"></script>
-    <script src="js/workoutbuilder/exercise.js"></script>
-    <script src="js/workoutbuilder/workout.js"></script>
-    <script src="js/config.js"></script>
+    <script>
+      System.config({
+        packages: {'js': {defaultExtension: 'js'}}
+      });
+      System.import('js/app.js');
+   </script>
 </body>
 </html>
