git ignore js files, now use ts files.

--- a/trainer/app/index.html
+++ b/trainer/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/app.css" />
 </head>
 <!--<body ng-app="appe2e" ng-controller="RootController">-->
-<body ng-app="app" ng-controller="RootController">
+<body ng-controller="RootController">
     <div class="navbar navbar-default navbar-fixed-top top-navbar">
         <div class="container-fluid">
             <div class="navbar-header">
