--- a/trainer/app/index.html
+++ b/trainer/app/index.html
@@ -62,6 +62,12 @@
     <!--<script src="js/appe2e.js"></script>-->
 
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.min.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="node_modules/angular2/bundles/upgrade.dev.js"></script>
+
     <script>
        System.config({
        packages: {'js': {defaultExtension: 'js'}},
